--- a/app/src/components/AppMain/AppMain.scss
+++ b/app/src/components/AppMain/AppMain.scss
@@ -1,12 +1,24 @@
 @import "../../scss/abstracts/variables";
 
 .app-main {
-  background-image: url(../../assets/inner-pg-bg.png);
-  background-repeat: no-repeat;
-  background-size: cover 400px;
+  position: relative;
+
+  &::before {
+    content: "";
+    background-image: url(../../assets/inner-pg-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: block;
+    width: 100%;
+    height: 19rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
   padding: $space-600 0 $space-300 0;
   .grid-container {
+    position: relative;
     max-width: 100%;
   }
 }
