--- a/app/src/components/Layout/AppFooter/AppFooter.scss
+++ b/app/src/components/Layout/AppFooter/AppFooter.scss
@@ -1,6 +1,10 @@
 @import "../../../scss/abstracts/variables";
 @import "../../../scss/abstracts/mixins";
 
+.usa-footer__secondary-section {
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+}
 .usa-footer__logo-img {
   color: $base;
   fill: currentColor;
