--- a/app/src/components/Divider/Divider.scss
+++ b/app/src/components/Divider/Divider.scss
@@ -1,7 +1,7 @@
 @import "../../scss/abstracts/variables";
 
 .divider {
-  margin: $space-300 0;
+  margin: 0 0;
   background-color: $base-lighter;
   height: 1px;
   border: none;
